# RenderDragon

./: README.md  RenderDragon.sln  RenderDragon.vcxproj  RenderDragon.vcxproj.filters  main.cpp  main_TiberianSunSharedMemory.cpp  main_emscripten.cpp  neuralNet.cpp  neuralNet.h
data/Shaders/: depthDisplay.ps.glsl  error_shader.glsl  simple.ps.glsl  simple.vntt.vs.glsl  simple.vs.glsl  simple_shading.ps.glsl
data/Shaders/include/: defines.glsl  functions.glsl  pbr.glsl
emsc/: CMakeLists.txt  emsc_compile.bat  emsc_pack_files.bat  index.html
graphics/: device.h  graphics.cmake  graphics.vcxproj  graphics.vcxproj.filters  include.h  main.cpp
graphics/data/Shaders/: simple.ps.glsl  simple.vnt.vs.glsl
graphics/descriptors/: buffer_desc.h  descriptors.h  device_desc.h  graphic_object.h  graphics_enums.h  pipeline_state_desc.h  render_pass_desc.h  shader_desc.h  shader_parser.h  texture_desc.h  uniform_buffer_desc.h  vertex_buffer_desc.h
graphics/enum/: graphics_enums.h
graphics/ext/material/: material.cpp  material.h
graphics/ext/model/: mesh.cpp  mesh.h
graphics/objects/: buffer.cpp  buffer.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  graphic_object.h  mipmap_gen.cpp  mipmap_gen.h  pipeline_state.cpp  pipeline_state.h  pipeline_state_desc.h  render_pass.cpp  render_pass.h  render_pass_desc.h  shader.cpp  shader.h  shader_desc.cpp  shader_desc.h  shader_parser.cpp  shader_parser.h  shader_resource_manager.cpp  shader_resource_manager.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
graphics/objects/base/: buffer.cpp  buffer.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  mipmap_gen.cpp  mipmap_gen.h  pipeline_state.h  render_pass.h  shader.cpp  shader.h  shader_resource_manager.cpp  shader_resource_manager.h  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
graphics/objects/opengl4/: buffer.cpp  buffer.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  glinclude.h  mipmap_gen.cpp  mipmap_gen.h  pipeline_state.cpp  pipeline_state.h  render_pass.cpp  render_pass.h  shader.cpp  shader.h  shader_resource_manager.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
graphics/objects/webgl/: buffer.cpp  buffer.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  glinclude.h  mipmap_gen.cpp  mipmap_gen.h  pipeline_state.cpp  pipeline_state.h  render_pass.cpp  render_pass.h  shader.cpp  shader.h  shader_resource_manager.cpp  shader_resource_manager.h  texture.cpp  texture.h  (+4 more)
graphics/shaders/: error_shader.glsl  simple.vnt.vs.glsl  simple.vs.glsl
graphics/utils/: containers.h  hash.h  log.h  platform.cpp  platform.h  platform_defines.h  pointers.h  singleton.h  strings.h  threads.h
utils/: pointers.h
utils/types/: types.h
(+16 files in other folders)
